<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_refresh_white_24dp"
        android:orderInCategory="1"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_save_changes"
        android:icon="@drawable/ic_save_white_24dp"
        android:orderInCategory="2"
        android:title="@string/menu_save_changes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_discard_changes"
        android:icon="@drawable/ic_close_white_24dp"
        android:orderInCategory="3"
        android:title="@string/menu_discard_changes"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/ddwrt_companion_tasker_feedback"
        android:alphabeticShortcut="f"
        android:orderInCategory="11"
        android:title="@string/send_feedback"
        app:showAsAction="never" />

    <item
        android:id="@+id/ddwrt_companion_tasker_about"
        android:alphabeticShortcut="a"
        android:orderInCategory="12"
        android:title="@string/about"
        app:showAsAction="never" />

</menu>
