<?xml version="1.0" encoding="utf-8"?>
<!--
DD-WRT Companion is a mobile app that lets you connect to,
monitor and manage your DD-WRT routers on the go.

Copyright (C) 2014  Armel Soro

This program is free software: you can redistribute it and/or modify
it under the terms of the GNU General Public License as published by
the Free Software Foundation, either version 3 of the License, or
(at your option) any later version.

This program is distributed in the hope that it will be useful,
but WITHOUT ANY WARRANTY; without even the implied warranty of
MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
GNU General Public License for more details.

You should have received a copy of the GNU General Public License
along with this program.  If not, see <http://www.gnu.org/licenses/>.

Contact Info: Armel Soro &lt;apps+ddwrt AT rm3l DOT org&gt;
-->

<com.sothree.slidinguppanel.SlidingUpPanelLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:sothree="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sliding_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="bottom"
    sothree:umanoPanelHeight="60dp"
    sothree:umanoShadowHeight="4dp"
    sothree:umanoOverlay="true"
    sothree:umanoParallaxOffset="100dp"
    sothree:umanoScrollableView="@+id/tasker_main_history_recyclerview"
    sothree:umanoDragView="@+id/tasker_main_history"
    tools:context=".ui.activity.main.DDWRTCompanionTaskerPluginLaunchActivity">

    <!-- MAIN CONTENT -->
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize" />

        <!-- Error message placeholder -->
        <TextView
            android:layout_marginTop="7dp"
            android:id="@+id/error_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:ellipsize="end"
            android:gravity="center"
            android:text="Error"
            android:textColor="@color/ddwrt_purple"
            android:textStyle="bold"
            android:visibility="gone" />
    
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="15dp">
    
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
    
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:textAppearance="?android:textAppearanceLarge"
                    android:textColor="@color/primaryColor"/>

                <View
                    android:layout_height="1dp"
                    android:layout_width="match_parent"
                    android:background="@color/primaryColor"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:id="@+id/tasker_main_about_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"/>

                <TextView
                    android:id="@+id/tasker_main_history_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:textAppearanceMedium"
                    android:text="@string/main_activity_app_description_history"/>

            </LinearLayout>
    
        </ScrollView>
    
    </LinearLayout>

    <!-- Sliding Up Panel -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:clickable="true"
        android:focusable="false"
        android:id="@+id/tasker_main_history">

        <RelativeLayout
            android:layout_margin="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="7dp"
                android:layout_marginStart="7dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:text="@string/history"
                android:textAppearance="?android:textAppearanceLarge"
                android:textColor="@color/primaryColor"/>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/tasker_main_history_refresh"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_refresh_white_24dp"
                    android:contentDescription="@string/refresh"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:attr/selectableItemBackground"/>

                <ImageButton
                    android:id="@+id/tasker_main_history_clear_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_clear_all_white_24dp"
                    android:contentDescription="@string/delete_all"
                    android:layout_marginRight="10dp"
                    android:layout_marginEnd="10dp"
                    android:background="?android:attr/selectableItemBackground"/>

            </LinearLayout>

        </RelativeLayout>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/tasker_main_history_recyclerview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="vertical"/>

        <TextView
            android:textIsSelectable="true"
            android:id="@+id/tasker_main_history_recyclerview_empty_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/no_recent_history" />

    </LinearLayout>
    
</com.sothree.slidinguppanel.SlidingUpPanelLayout>